--- a/api/v1/views/documentation/survey/post_survey.yml
+++ b/api/v1/views/documentation/survey/post_survey.yml
@@ -3,7 +3,7 @@
     tags:
       - Surveys
     parameters:
-      - name: name
+      - name: data
         in: body
         required: true
         requires:
