--- a/api/v1/views/documentation/survey/put_survey.yml
+++ b/api/v1/views/documentation/survey/put_survey.yml
@@ -3,11 +3,12 @@
     tags:
       - Surveys
     parameters:
-      - name: survey_id
-        in: path
-        type: string
+      - name: data
+        in: body
         required: true
-        description: The id of the survey to update
+        properties:
+          name:
+            type: string
 
     responses:
       404:
