--- a/api/v1/views/documentation/user/post_user.yml
+++ b/api/v1/views/documentation/user/post_user.yml
@@ -3,7 +3,7 @@
     tags:
       - Users
     parameters:
-      - name: user_and_password
+      - name: data
         in: body
         required: true
         requires:
