--- a/api/v1/views/documentation/category/post_category.yml
+++ b/api/v1/views/documentation/category/post_category.yml
@@ -3,7 +3,7 @@
     tags:
       - Categories
     parameters:
-      - name: name
+      - name: data
         in: body
         required: true
         requires:
