--- a/api/v1/views/documentation/category/put_category.yml
+++ b/api/v1/views/documentation/category/put_category.yml
@@ -3,11 +3,12 @@
     tags:
       - Categories
     parameters:
-      - name: category_id
-        in: path
-        type: string
+      - name: data
+        in: body
         required: true
-        description: The id of the category to update
+        properties:
+          name:
+            type: string
 
     responses:
       404:
