add dashboard and answer static

--- a/api/v1/views/documentation/user/me.yml
+++ b/api/v1/views/documentation/user/me.yml
@@ -1,13 +1,7 @@
-Retrieves a specific user.
+Retrieves authenticated user.
 ---
 tags:
   - Users
-parameters:
-  - name: user_id
-    in: path
-    type: string
-    required: true
-    description: The id of the user to retrieve
 responses:
   404:
     description: user not found!
