--- a/api/v1/views/documentation/survey/survey_user_score.yml
+++ b/api/v1/views/documentation/survey/survey_user_score.yml
@@ -2,6 +2,12 @@
   ---
   tags:
     - Surveys
+  parameters:
+  - name: survey_id
+    in: path
+    type: string
+    required: true
+    description: The id of the survey to retrieve
   responses:
     200:
       description: Request executed successfully
@@ -9,18 +15,17 @@
         properties:
           count:
             type: int
-          results:
-            __class__:
-              type: string
-            created_at:
-              type: string
-              description: time of creation of the instance
-            updated_at:
-              type: string
-              description: time of last update of the instance
-            id:
-              type: string
-              description: The uuid of the instance
-            name:
-               type: string
-              description: survey's name
+          __class__:
+            type: string
+          created_at:
+            type: string
+            description: time of creation of the instance
+          updated_at:
+            type: string
+            description: time of last update of the instance
+          id:
+            type: string
+            description: The uuid of the instance
+          name:
+            type: string
+            description: survey's name
