Add API Survey all user score entrypoint

--- a/api/v1/views/documentation/category/category_user_score.yml
+++ b/api/v1/views/documentation/category/category_user_score.yml
@@ -14,7 +14,7 @@
       schema:
         properties:
           count:
-            type: int
+            type: integer
           __class__:
             type: string
           created_at:
