Fix keyboard mistakes

--- a/api/v1/views/documentation/category/all_user_score.yml
+++ b/api/v1/views/documentation/category/all_user_score.yml
@@ -4,7 +4,7 @@
     - Categories
   responses:
     404:
-      description: User entity not found or No data avalaible, please contribute to a survey in order to see some.'
+      description: User entity not found or No data avalaible, please contribute to a survey in order to see some.
     200:
       description: Success
       schema:
